--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
 kotlin.code.style=official
-kotlin.version=1.7.20
-agp.version=7.3.0
-compose.version=1.2.2
+
+#Gradle
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+
+
+
+#Development
+development=true
